[package]
name = "trackfs-rs"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
concurrent_lru = "0.2.0"
cue-rw = "0.2.1"
dashmap = "6.1.0"
deadpool = "0.12.1"
encoding_rs = "0.8.35"
fuser = "0.15.0"
futures = "0.3.31"
image = "0.25.5"
itertools = "0.13.0"
libc = "0.2.167"
libflac-sys = "0.3.1"
num_cpus = "1.16.0"
num_enum = "0.7.3"
num-rational = "0.4.2"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.dev]
overflow-checks = false